[package]
edition = "2021"
name = "fairy-bundler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
concurrent = ["swc_common/concurrent", "parking_lot"]
default = ["concurrent"]

[dependencies]
bytes = {version = "1"}
daggy = {version = "0.8"}
generational-arena = "0.2"
indexmap = "1.9"
locking = {git = "https://github.com/kildevaeld/stuff-rs", features = ["lock", "parking_lot"]}
parking_lot = {version = "0.12", optional = true}
# petgraph = "0.6"
relative-path = "1"
thiserror = "1"

swc_common = {version = "0.29"}
swc_ecma_ast = "0.94"
swc_ecma_codegen = "0.127"
swc_ecma_parser = "0.122"
swc_ecma_transforms = "0.198"
swc_ecma_visit = "0.80"
