[package]
edition = "2021"
name = "fairy-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fairy"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
fairy-core = {path = "../fairy-core"}
fairy-http = {path = "../fairy-http"}

dale-http = {git = "https://github.com/kildevaeld/dale-rs", features = ["headers", "hyper"]}
dale-runtime = {git = "https://github.com/kildevaeld/dale-rs", features = ["tokio"]}
hyper = {version = "0.14", features = ["http1", "server", "runtime"]}
markup = "0.13"
pretty_env_logger = "0.4"
tokio = {version = "1", features = ["rt", "macros"]}
