[package]
edition = "2021"
name = "fairy-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
relative-path = {version = "1", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
typetag = "0.2"
