[package]
edition = "2021"
name = "fairy-dev"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
concurrent = ["rayon", "swc_common/concurrent", "swc/concurrent", "swc_bundler/concurrent", "parking_lot"]
default = []

[dependencies]
Inflector = "0.11"
anyhow = "1"
fairy-core = {path = "../fairy-core"}

locking = {git = "https://github.com/kildevaeld/stuff-rs", features = ["parking_lot", "lock"]}
mime = "0.3"
parking_lot = {version = "0.12", optional = true}
pathdiff = "0.2"
rayon = {version = "1", optional = true}
relative-path = {version = "1", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
swc = "0.232.27"
swc_atoms = {version = "0.4"}
swc_bundler = {version = "0.192"}
swc_common = {version = "0.29", features = ["tty-emitter", "concurrent"]}
swc_ecma_ast = {version = "0.94"}
swc_ecma_codegen = {version = "0.127"}
swc_ecma_loader = {version = "0.41", features = ["node", "cache"]}
swc_ecma_minifier = "0.159"
swc_ecma_parser = {version = "0.122", features = []}
swc_ecma_transforms_base = "0.111"
swc_ecma_transforms_optimization = "0.167"
swc_ecma_visit = {version = "0.80"}

mime_guess = {version = "2"}
