[package]
edition = "2021"
name = "fairy-http"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# concurrent = ["rayon", "swc_common/concurrent", "swc/concurrent", "swc_bundler/concurrent"]
default = []

[dependencies]
dale = {git = "https://github.com/kildevaeld/dale-rs"}
dale-http = {git = "https://github.com/kildevaeld/dale-rs", features = ["headers"]}
dale-runtime = {git = "https://github.com/kildevaeld/dale-rs"}
mime = "0.3"
pathdiff = "0.2"
relative-path = {version = "1", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"

fairy-core = {path = "../fairy-core"}
fairy-dev = {path = "../fairy-dev", features = ["concurrent"]}
futures-channel = "0.3"

threadpool = {git = "https://github.com/rust-threadpool/rust-threadpool", branch = "2.0", features = ["crossbeam"]}

[dev-dependencies]
dale-http = {git = "https://github.com/kildevaeld/dale-rs", features = ["headers", "hyper"]}
dale-runtime = {git = "https://github.com/kildevaeld/dale-rs", features = ["tokio"]}
hyper = {version = "0.14", features = ["http1", "server", "runtime"]}
markup = "0.13"
tokio = {version = "1", features = ["rt", "macros"]}
